colocando mudancas do joao paulo

--- a/eaeNutri.html
+++ b/eaeNutri.html
@@ -51,7 +51,7 @@
 				[Sobre a nutri: onde se formou, estudou, porque nutricionista etc]<br/>
 			</aside>
 			<footer class="rodape">
-    			<p>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentado uma Vida Saldável) - By Cyborg Team - 2016 - Parnaíba-PI</p>
+    			<p>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saldável) - By Cyborg Team - 2016 - Parnaíba-PI</p>
 			</footer>
 		</div>
 	</body>
