--- a/iframe/imc-1/exercicios.html
+++ b/iframe/imc-1/exercicios.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" type="text/css" href="../css/iframe.css" />
+	<link rel="stylesheet" type="text/css" href="../../css/iframe.css" />
 </head>
 	<body>
 		<header id="secundario">
@@ -10,11 +10,14 @@
         	<label for="btn-menu"> <img src="img\img-menu\menu-alt-512.png" alt=""></label>
            	<nav class ="menu-sec">
             	<ul>
-            		<li><a href="imc-1/dietas.html" onclick="iframeHeight(2)">Dietas</a></li>
-            		<li><a href="imc-1/exercicios.html">Exercicios</a></li>
+            		<li><a href="dietas.html" onclick="alteraIframe(1)">Dietas</a></li>
+            		<li><a href="exercicios.html">Exercicios</a></li>
 				</ul>
 			</nav>
 		</header>
+		<section>
+		<h1>Exercícios</h1>		
+		</section>
 	</body>
 	<script language="javascript" src="../js/iframe-height.js"></script>
 </html>
