--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>	   
         <meta name="viewport" content="width=device-width, initial-scale=1"/>  
-		<title>Reufi | Eae Nutri</title>
+		<title>Reufi | Sobre nós</title>
         <link rel="icon" href="img/logo/logo2.png"/>	
 		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1000px)" href="css/index_large.css"/>
 		<!--
@@ -28,45 +28,29 @@
 	 				</ul>
    				</nav>
 			</header>
-			<section id="videos"> 
-				<h1> Sobre Nós</h1> 
-  
-<h2>Cordenadores do Projeto: </h2>
- <br/> <br/>
-Denylson Melo Pereira<br/>
-Antonio Santos de Sousa<br/>
-Márcia Regina Soares Araújo<br/>
-Antônio Carlos de Oliveira<br/>
-<br/> <br/> 
-<h2>Alunos participantes do projeto:</h2>
-<br/> <br/>
-Manoel Eric Nascimento de oliveira </br>
-João Paulo da Silva Carvalho</br>
-Lucas Lima Souza</br>
-Tawan de Oliveira Rodrigues Maciel</br>
-Wendell dos Santos Silva</br>
-	</section>
-<aside id="sobre">
-	<div id="sobre-nutri">
-
-
-<h2>Sobre o site:</h2>
-<br/> 
-&nbsp;&nbsp;&nbsp;&nbsp; Historicamente a tecnologia é sempre colocada, como uma problemática. A chegada da evolução tecnológica sempre causou preocupação em qualquer aspecto como, por exemplo, a utilização em guerras, no trabalho  com a substituição da mão de obra humana pela de máquinas, o uso de agrotóxicos, entre outras grandes mudanças que aconteceram no decorrer da historia. Não é diferente quando se trata de alimentação.</br>
-Na atualidade a tecnologia é vista, como “antônimo” de uma vida saudável, sendo sempre colocada como prejudicial á saúde, como por exemplo, Alimentos ultra processados são alimentos que passam por processo industrial de transformação e ficam prontos para o consumo. O aumento do consumo está fortemente correlacionado com o aumento do peso corporal médio, indicando que estes produtos são um dos principais fatores das taxas aumentadas de sobrepeso e obesidade na região.
-Entretanto, nosso projeto tem como objetivo desmistificar essa visão da sociedade, mostrando que a tecnologia pode ser “sinônimo” de vida saudável, por ser uma ferramenta barata e eficaz para fornecer apoio a essa mudança.
-</aside>
-<footer id="rodape">
-    by CIBORG 
-</footer>
-
-
-
-
-
-
-
-
-
-</body>
+			<section class="postagens"> 
+				<h1> Sobre nós</h1> 
+  				<h2>Cordenadores do Projeto: </h2>
+				Denylson Melo Pereira<br/>
+				Antonio Santos de Sousa<br/>
+				Márcia Regina Soares Araújo<br/>
+				Antônio Carlos de Oliveira<br/>
+				<h2>Alunos participantes do projeto:</h2>
+				Manoel Eric Nascimento de oliveira </br>
+				João Paulo da Silva Carvalho</br>
+				Lucas Lima Souza</br>
+				Tawan de Oliveira Rodrigues Maciel</br>
+				Wendell dos Santos Silva</br>
+			</section>
+			<aside class="windgets">
+				<style>p{text-indent: 50px;text-align:justify;}</style>
+				<h2>Sobre o site:</h2>
+				<p>Historicamente a tecnologia é sempre colocada, como uma problemática. A chegada da evolução tecnológica sempre causou preocupação em qualquer aspecto como, por exemplo, a utilização em guerras, no trabalho  com a substituição da mão de obra humana pela de máquinas, o uso de agrotóxicos, entre outras grandes mudanças que aconteceram no decorrer da historia. Não é diferente quando se trata de alimentação.</p>
+				<p>Na atualidade a tecnologia é vista, como “antônimo” de uma vida saudável, sendo sempre colocada como prejudicial á saúde, como por exemplo, Alimentos ultra processados são alimentos que passam por processo industrial de transformação e ficam prontos para o consumo. O aumento do consumo está fortemente correlacionado com o aumento do peso corporal médio, indicando que estes produtos são um dos principais fatores das taxas aumentadas de sobrepeso e obesidade na região.Entretanto, nosso projeto tem como objetivo desmistificar essa visão da sociedade, mostrando que a tecnologia pode ser “sinônimo” de vida saudável, por ser uma ferramenta barata e eficaz para fornecer apoio a essa mudança.<p>
+			</aside>
+			<footer class="rodape">
+				<p>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saldável) - By Cyborg Team - 2016 - Parnaíba-PI</p>
+			</footer>
+		</div>
+	</body>
 </html>
