--- a/iframe/iframe-index.html
+++ b/iframe/iframe-index.html
@@ -1,18 +1,31 @@
 <!doctype html>
 <html lang="pt-br">
-<head>
-	<meta charset="utf-8"/>
-	<style>
-	h1 {
-		text-align: center;
-		font-family: arial, sans-serif;	
-	}	
-	h1 span {
-		font-weight: bold;	
-	}
-	</style>
-</head>
-	<body>
-		<h1>Bem-vindos ao <span>Reufi</span>!</h1>
+	<head>
+		<meta charset="utf-8"/>
+		<link rel="stylesheet" type="text/css" href="../css/iframe.css"/>
+	</head>
+	<body id="corpo" onload="fadein('talk1');">
+		<figure id="talk1">
+			<img id="balao1" src="../img/talk/balao1.png"/>
+			<img id="balao2" src="../img/talk/balao2.png"/>
+			<img id="balao3" src="../img/talk/balao3.png"/>
+			<figcaption>
+				<p id="ex">Diálogo meramente demonstrativo, sem distinção de sexo.</p>
+			</figcaption>
+		</figure>
+		<article id="inf">
+			<h2>ANTES DE QUALQUER COISA, LEIA!</h2>
+			<p>Este foi um trabalho realizado pelos alunos do 1º ano do Curso de Informática Integrado ao Ensino Médio do IFPI Campus Parnaíba em 2016 como principal proposta do projeto <span>TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) apresentado na <span>SNCT</span> 2016 (Semana Nacional de Ciência e Tecnologia).</p>
+			<p>Por ser um projeto desenvolvido pelos alunos de 1º ano, toda e qualquer informação provida por meio deste site, não deve ser seguida sem antes ser realizada uma consulta e acompanhamento por uma nutricionista, pois ela, como profissional formada e especializada na área, pode lhe ajudar a ganhar ou perder peso de acordo com o seu IMC.</p>
+			<h3>Professores Orientadores</h3>
+			<ul id="professores">
+				<li id="p1">Denylson Melo</li>
+				<li id="p2">Márcia Regina</li>
+				<li id="p3">Antonio Santos</li>
+				<li id="p4">Antônio Carlos</li>
+			<ul>
+			<img id="ifpiLogo" src="../img/ifpilogo.png"/>
+		</article>
 	</body>
+	<script language="javascript" src="../js/fadein-talk.js"></script>
 </html>
