--- a/iframe/imc-5.html
+++ b/iframe/imc-5.html
@@ -8,25 +8,24 @@
 		<header id="secundario">
            	<nav class ="menu-sec">
             	<ul>
-            		<li onclick="window.location.href='imc-1/dicas.html';">Sugestão de cardápio</li>
-            		<li onclick="window.location.href='imc-1/alimentacao.html';">Dicas</li>
+            		<li onclick="window.location.href='imc-5/alimentacao.html';">Dicas</li>
 				</ul>
 			</nav>
 		</header>
 		<figure id="talk2">
+			<img id="balao7" src="../img/talk/balao7.png"/>
 			<img id="balao4" src="../img/talk/balao4.png"/>
-			<img id="balao5" src="../img/talk/balao5.png"/>
-			<img id="balao6" src="../img/talk/balao6.png"/>
+			<img id="balao8" src="../img/talk/balao8.png"/>
 			<figcaption>
-				<p id="ex">Diálogo meramente demonstrativo, sem distinção de sexo.</p>
+				<p id="ex2">Diálogo meramente demonstrativo, sem distinção de sexo.</p>
 			</figcaption>
 		</figure>
 		<article id="inf">
-			<h2>LEMBRE-SE</h2>
+			<h2>AVISO</h2>
 			<figure>
-				<img id="like" src="../img/like.png"/>
+				<img id="danger" src="../img/danger.png"/>
 				<figcaption id="figScrr">
-					<p id="scrr">O(a) nutricionista é sempre o melhor caminho!</p>
+					<p id="scrr">Procure com urgência um(a) médico(a)!</p>
 					<p id="scrr2">Não faça nada sem acompanhamento.</p>
 				</figcaption>
 			</figure>
