--- a/sobre.html
+++ b/sobre.html
@@ -4,8 +4,10 @@
 		<meta charset="utf-8"/>	   
         <meta name="viewport" content="width=device-width, initial-scale=1"/>  
 		<title>Reufi | Sobre nós</title>
-        <link rel="icon" href="img/logo/logo2.png"/>	
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1000px)" href="css/index_large.css"/>
+        <link rel="icon" href="img/logo/logo2.png"/>
+        <!-- RESPONSIVE DESIGN BY "JOÃO PAULO CARVALHO" -->
+        <link rel="stylesheet" type="text/css" href="css/sobre.css"/>
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1080px)" href="css/index_large.css"/>
 		<!--
         <link rel="stylesheet" type="text/css" media="screen and (min-width: 700px; max-width: 999px)" href="css/index_medium.css"/>
         <link rel="stylesheet" type="text/css" media="screen and (min-width: 0px)" href="css/index_small.css"/>
@@ -15,41 +17,104 @@
 		<div class="interface">
 			<header>
 				<figure id="logo-fig">
-					<img id="log1" src="img/logo/logo1.png" alt="Design by Cyborg Team"/>
-					<img id="log2" src="img/logo/logo2.png" alt="Design by Cyborg Team"/>
-					<img id="log3" src="img/logo/logo_NAME.png" alt="Design by Cyborg Team"/>
+					<img id="log1" src="img/logo/logo1.png" alt="Design by João Paulo Carvalho"/>
+					<img id="log2" src="img/logo/logo2.png" alt="Design by João Paulo Carvalho"/>
+					<img id="log3" src="img/logo/logo_NAME.png" alt="Design by João Paulo Carvalho"/>
+				<figcaption><p>ALPHA</p></figcaption>
 				</figure>
 				<nav class="menu">
    					<ul type="disc">
         				<h1> Menu Principal </h1> 
-        				<li> <a href="index.html">Home</a></li>
-        				<li> <a href="eaeNutri.html">iae Nutri </a></li>
-        				<li> <a href="sobre.html">Sobre nós</a></li>
+        				<li onclick="window.location.href = 'index.html';"> Home</li>
+        				<li onclick="window.location.href = 'eaeNutri.html';"> Iae Nutri</li>
+        				<li onclick="window.location.href = 'sobre.html';"> Sobre nós</li>
 	 				</ul>
    				</nav>
 			</header>
-			<section class="postagens"> 
-				<h1> Sobre nós</h1> 
-  				<h2>Cordenadores do Projeto: </h2>
-				Denylson Melo Pereira<br/>
-				Antonio Santos de Sousa<br/>
-				Márcia Regina Soares Araújo<br/>
-				Antônio Carlos de Oliveira<br/>
-				<h2>Alunos participantes do projeto:</h2>
-				Manoel Eric Nascimento de oliveira </br>
-				João Paulo da Silva Carvalho</br>
-				Lucas Lima Souza</br>
-				Tawan de Oliveira Rodrigues Maciel</br>
-				Wendell dos Santos Silva</br>
+			<section class="postagens">
+				<article id="prof">
+  					<h2>PROFESSORES ORIENTADORES</h2>
+  					<ul id="teacher">
+						<li>Denylson Melo Pereira</li>
+						<li>Antonio Santos de Sousa</li>
+						<li>Márcia Regina Soares Araújo</li>
+						<li>Antônio Carlos de Oliveira</li>
+					</ul>
+				</article>
+				<article id="cyb">
+					<h2>CYBORG TEAM (DESENVOLVEDORES DA PLATAFORMA)</h2>
+					<ul id="team">
+						<li>João Paulo da Silva Carvalho</li>
+						<li>Lucas Lima <br/> Souza</li>
+						<li>Manoel Eric N. de Oliveira </li>
+						<li>Tawan de Oliveira Rodrigues Maciel</li>
+						<li>Wendell dos Santos Silva</li>
+						<li>André Henrique Pereira Martins</li>
+					</ul>
+				</article>
+				<article id="turm">
+					<h2>TURMA (DESENVOLVEDORES DO PROJETO)</h2>
+					<ul id="classrom">
+						<li>Adriano Silva de Araújo</li>
+						<li>Ana Beatriz Silva Aragão</li>
+						<li>Vitória Evenlly Lopes de Brito</li>
+						<li>Vanessa Cristina de Barros Silva de Sousa</li>
+						<li>Vinicius Assunção dos Santos</li>
+						<li>Robert Brazil <br/> Lisboa</li>
+						<li>Roberta Larissa da Silva Carvalho</li>
+						<li>Ruth Adnil de Sousa Soares</li>
+						<li>Sergina Maria Barros Pereira</li>
+						<li>Sthefany dos Santos Brazil</li>
+						<li>Mylena Maria Silva Sousa</li>
+						<li>Pedro Henrique da Silva Lopes</li>
+						<li>Raony Silva dos Santos</li>
+						<li>Marina dos Santos Silva</li>
+						<li>Matusalém Honorato de Moraes</li>
+						<li>Maurício Barros da Silva Júnior</li>
+						<li>Lucas Vinicius Nunes do Nascimento</li>
+						<li>Maria Eduarda da Silva Pereira</li>
+						<li>Lenon Aguiar Rodrigues</li>
+						<li>Weslley Gomes <br/> Costa</li>
+						<li>Lucas Rodrigues Fechter dos Santos</li>
+						<li>Jodan Lima <br/> Galas</li>
+						<li>Jonathan Silva Santos</li>
+						<li>Laercio Souza da Silva</li>
+						<li>João Victor Carvalho Araujo</li>
+						<li>João Victor dos Santos Silva</li>
+						<li>Igor Ferreira <br/> Pereira</li>
+						<li>Isabele Alves de Sousa</li>
+						<li>Jamily de Araujo Sousa</li>
+						<li>Francisco Vitor Costa dos Santos</li>
+						<li>Gabriel Assuero Ribeiro de Sousa</li>
+						<li>Hérick Gomes <br/> Costa</li>
+						<li>Ester Almeida de Sousa</li>
+						<li>Francisco de Jesus da Silva Lopes</li>
+						<li>Francisco Edward Pinho Cardoso</li>
+						<li>Diego Vieira <br/> da Silva</li>
+						<li>Emilly Martins Ferreira Horta</li>
+						<li>Érica Cardoso <br/> Brito</li>
+						<li>Carlos Vinicius Barros de Morais</li>
+						<li>Damares Suelen F. do Nascimento</li>
+						<li>Denilson da Silva Escorcio</li>
+						<li>Antonia Karliana Costa Santos</li>
+						<li>Antonia Mariane Rocha da Silva</li>
+						<li>Carlos Andre Araujo Sobral</li>
+					</ul>
+				</article>
 			</section>
 			<aside class="windgets">
-				<style>p{text-indent: 50px;text-align:justify;}</style>
-				<h2>Sobre o site:</h2>
-				<p>Historicamente a tecnologia é sempre colocada, como uma problemática. A chegada da evolução tecnológica sempre causou preocupação em qualquer aspecto como, por exemplo, a utilização em guerras, no trabalho  com a substituição da mão de obra humana pela de máquinas, o uso de agrotóxicos, entre outras grandes mudanças que aconteceram no decorrer da historia. Não é diferente quando se trata de alimentação.</p>
-				<p>Na atualidade a tecnologia é vista, como “antônimo” de uma vida saudável, sendo sempre colocada como prejudicial á saúde, como por exemplo, Alimentos ultra processados são alimentos que passam por processo industrial de transformação e ficam prontos para o consumo. O aumento do consumo está fortemente correlacionado com o aumento do peso corporal médio, indicando que estes produtos são um dos principais fatores das taxas aumentadas de sobrepeso e obesidade na região.Entretanto, nosso projeto tem como objetivo desmistificar essa visão da sociedade, mostrando que a tecnologia pode ser “sinônimo” de vida saudável, por ser uma ferramenta barata e eficaz para fornecer apoio a essa mudança.<p>
+				<style>p{text-indent: 50px;text-align:justify;margin-top:20px;}</style>
+				<h2>Sobre o site</h2>
+				<p>Esse projeto foi idealizado e desenvolvido pelos alunos ingressantes do primeiro ano do ensino médio integrado ao técnico em informática do Instituto Federal de Educação, Ciência e Tecnologia do Piauí(IFPI) campus Parnaíba. Com o objetivo de ressaltar pontos positivos e importantes em relação à interferência no modo atual de alimentação dos jovens, nosso projeto coloca a tecnologia de modo geral como uma ferramenta de importante utilidade para alcançar o objetivo de um projeto em busca de vida saldável.</p>
+				<p>Entendendo que os jovens da chamada “geração z” estão sempre expostos a uma infinidade de informações das mais diversas possíveis e já estão muito mais conscientes que uma alimentação saUdável é a chave para uma vida melhor e duradoura, esse site vem com o objetivo de usar uma linguagem simples e jovem para chamar a atenção a um problema que assola a população mundial como, por exemplo, o problema da obesidade, e apresentando também soluções simples e eficazes com atitudes que podem ser feitas em qualquer lugar da casa ou apartamento, consiste em tentar proporcionar o tão conhecido “primeiro-passo” a uma vida consciente .<p>
+			</aside>
+			<aside class="windgets2">
+				<h2>Sobre a turma</h2>
+				<p>Esta turma, durante a reaização do projeto, no ano de 2016, estava a cursar o 1º ano do Curso Técnico em Informática Integrado ao Ensino Médio no IFPI (Instituto Federal do Piauí) - Campus Parnaíba. Turma composta por 50 alunos, aonde a faixa etária varia dos 14 aos 20 anos.</p>
 			</aside>
 			<footer class="rodape">
-				<p>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saldável) - By Cyborg Team - 2016 - Parnaíba-PI</p>
+				<h3>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) - By <span id="tavisNome">Cyborg Team</span> - 2016 - Parnaíba-PI</h3>
+				<p>Site 100% desenvolvido em HTML5, CSS3 e Javascript</p>
 			</footer>
 		</div>
 	</body>
