colocando links dos videos no youtube

--- a/eaeNutri.html
+++ b/eaeNutri.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>  
 		<title>Reufi | Iae Nutri</title>
         <link rel="icon" href="img/logo/logo2.png"/>
-        <!-- RESPONSIVE DESIGN BY "JOÃO PAULO CARVALHO" -->
+        <!-- DESIGN BY "JOÃO PAULO CARVALHO" -->
         <style type="text/css">
 			#logo-fig figcaption p {
 				display: block;
@@ -15,13 +15,13 @@
 				}
 		</style>
         <link rel="stylesheet" type="text/css" href="css/videos.css"/>
+        <link rel="stylesheet" type="text/css" media="screen and (max-width: 1079px)" href="css/index_small.css"/>
 		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1080px)" href="css/index_large.css"/>
-		<!--
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 700px; max-width: 999px)" href="css/index_medium.css"/>
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 0px)" href="css/index_small.css"/>
-		-->
 	</head>
 	<body>
+		<figure id="err">
+			<figcaption><p>Site incompatível com a tela<br/>do seu dispositivo!<br>Estamos trabalhando nisso.</p></figcaption>
+		</figure>
 		<div class="interface">
 			<header>
 				<figure id="logo-fig">
@@ -40,29 +40,33 @@
    				</nav>
 			</header>
 			<section class="postagens"> 
+				<article id="c0">
+					<h2>Por que é importante se preocupar com uma alimentação saudável na adolescência?</h2>
+					<iframe src="https://www.youtube.com/embed/ndpZwNEk_tI?list=PLdPcUthFQCZCfUFuDdhhQmZ34W7didm1Y" frameborder="0" allowfullscreen></iframe>
+				</article>
 				<article id="c1">
-					<h2>Pergunta</h2>
-					<p>Vídeo</p>
+					<h2>A gordura é sempre inimiga?</h2>
+					<iframe src="https://www.youtube.com/embed/1b9Gv2T8y74?list=PLdPcUthFQCZCfUFuDdhhQmZ34W7didm1Y" frameborder="0" allowfullscreen></iframe>					
 				</article>
 				<article id="c2">
-					<h2>Pergunta</h2>
-					<p>Vídeo</p>
+					<h2>Tecnologia: inimiga ou aliada?</h2>
+					<iframe src="https://www.youtube.com/embed/qRIOjU6Rj64?list=PLdPcUthFQCZCfUFuDdhhQmZ34W7didm1Y" frameborder="0" allowfullscreen></iframe>
 				</article>
 				<article id="c3">
-					<h2>Pergunta</h2>
-					<p>Vídeo</p>
+					<h2>Como você avalia os hábitos alimentares dos adolescentes?</h2>
+					<iframe src="https://www.youtube.com/embed/vU2PUDur8Bs?list=PLdPcUthFQCZCfUFuDdhhQmZ34W7didm1Y" frameborder="0" allowfullscreen></iframe>
 				</article>
 				<article id="c4">
-					<h2>Pergunta</h2>
-					<p>Vídeo</p>
+					<h2>Qual a melhor hora do dia para realizar exercício físico?</h2>
+					<iframe src="https://www.youtube.com/embed/UtUKOxvX2KA?list=PLdPcUthFQCZCfUFuDdhhQmZ34W7didm1Y" frameborder="0" allowfullscreen></iframe>
 				</article>
 				<article id="c5">
-					<h2>Pergunta</h2>
-					<p>Vídeo</p>
+					<h2>Jejum ajuda a perder peso?</h2>
+					<iframe src="https://www.youtube.com/embed/CrXq_lMKn7Y?list=PLdPcUthFQCZCfUFuDdhhQmZ34W7didm1Y" frameborder="0" allowfullscreen></iframe>
 				</article>
 				<article id="c6">
-					<h2>Pergunta</h2>
-					<p>Vídeo</p>
+					<h2>Piramide alimentar</h2>
+					<iframe src="https://www.youtube.com/embed/dB3dq1tdRxI" frameborder="0" allowfullscreen></iframe>		
 				</article>
 			</section>
 			<aside class="windgets">
@@ -71,7 +75,7 @@
 				<span id="tx">
 					<h2>Tamires Lima Viana</h2> 
 					<h3>Nutricionista, formada pela<br/>UNINOVAFAPI - Teresina, Piauí</h3>
-    				<p>Durantes sua graduação obteve experiências grandiosas atuando em diferentes áreas como, por exemplo, na parte social na Maternidade Evangelina Rosa, na parte de alimentação no SESC Teresina e no HUT(Hospital universitário de Teresina) área de clinicas e atualmente está trabalhando na área de UAN (Unidade de Alimentação e Nutrição) onde pretende continuar atuando.</p>
+    				<p>Durante sua graduação obteve experiências grandiosas atuando em diferentes áreas como, por exemplo, na parte social na Maternidade Evangelina Rosa, na parte de alimentação no SESC Teresina e no HUT(Hospital universitário de Teresina) área de clinicas e atualmente está trabalhando na área de UAN (Unidade de Alimentação e Nutrição) onde pretende continuar atuando.</p>
    					<p>Desde muito jovem Tamires se encantou pelo mundo da alimentação, cursou seu ensino médio no Instituto Federal de Educação,Ciência e Tecnologia do Piaui- Campus Parnaíba, onde realizou o Curso de Técnico em Edificações, porém sua paixão pela alimentação foi mais forte e incentivou-a ao estudo na área da nutrição.</p>
 				</span>
 			</aside>
