--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		<figure id="err">
-			<figcaption><p>Site incompatível com a tela<br/>do seu dispositivo!</p></figcaption>
+			<figcaption><p>Site incompatível com a tela<br/>do seu dispositivo!<br>Estamos trabalhando nisso.</p></figcaption>
 		</figure>
 		<div class="interface">
 			<header>
@@ -61,6 +61,11 @@
                         <button type="submit" id="makecalc">Calcule</button>
                     </fieldset>
                 </form>
+			</aside>
+			<aside class="windgets2">
+				<h2>Observação sobre o cálculo</h2>
+				<p>Não pode ser aplicado em crianças. Pessoas musculosas podem ter o IMC alto e não serem consideradas gordas. A influência de diferenças raciais e étnicas (de acordo com a organização mundial de saúde, pessoas de origem asiática poderiam ser consideradas acima do peso com um IMC de 23).</p>
+				<p>O (IMC) Índice de Massa Corporal, apesar de ter alguns problemas ainda é o método mais rápido para obter a informação se está abaixo do peso normal, acima do peso ideal, ou obeso.</p>
 			</aside>
 			<footer class="rodape">
 				<h3>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) - By <span id="tavisNome">Cyborg Team</span> - 2016 - Parnaíba-PI</h3>
