--- a/sobre.html
+++ b/sobre.html
@@ -5,15 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>  
 		<title>Reufi | Sobre nós</title>
         <link rel="icon" href="img/logo/logo2.png"/>
-        <!-- RESPONSIVE DESIGN BY "JOÃO PAULO CARVALHO" -->
+        <!-- DESIGN BY "JOÃO PAULO CARVALHO" -->
         <link rel="stylesheet" type="text/css" href="css/sobre.css"/>
+        <link rel="stylesheet" type="text/css" media="screen and (max-width: 1079px)" href="css/index_small.css"/>
 		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1080px)" href="css/index_large.css"/>
-		<!--
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 700px; max-width: 999px)" href="css/index_medium.css"/>
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 0px)" href="css/index_small.css"/>
-		-->
 	</head>
 	<body>
+		<figure id="err">
+			<figcaption><p>Site incompatível com a tela<br/>do seu dispositivo!<br>Estamos trabalhando nisso.</p></figcaption>
+		</figure>
 		<div class="interface">
 			<header>
 				<figure id="logo-fig">
@@ -105,7 +105,7 @@
 			<aside class="windgets">
 				<style>p{text-indent: 50px;text-align:justify;margin-top:20px;}</style>
 				<h2>Sobre o site</h2>
-				<p>Esse projeto foi idealizado e desenvolvido pelos alunos ingressantes do primeiro ano do ensino médio integrado ao técnico em informática do Instituto Federal de Educação, Ciência e Tecnologia do Piauí(IFPI) campus Parnaíba. Com o objetivo de ressaltar pontos positivos e importantes em relação à interferência no modo atual de alimentação dos jovens, nosso projeto coloca a tecnologia de modo geral como uma ferramenta de importante utilidade para alcançar o objetivo de um projeto em busca de vida saldável.</p>
+				<p>Esse projeto foi idealizado e desenvolvido pelos alunos ingressantes do primeiro ano do ensino médio integrado ao técnico em informática do Instituto Federal de Educação, Ciência e Tecnologia do Piauí(IFPI) campus Parnaíba. Com o objetivo de ressaltar pontos positivos e importantes em relação à interferência no modo atual de alimentação dos jovens, nosso projeto coloca a tecnologia de modo geral como uma ferramenta de importante utilidade para alcançar o objetivo de um projeto em busca de vida saudável.</p>
 				<p>Entendendo que os jovens da chamada “geração z” estão sempre expostos a uma infinidade de informações das mais diversas possíveis e já estão muito mais conscientes que uma alimentação saUdável é a chave para uma vida melhor e duradoura, esse site vem com o objetivo de usar uma linguagem simples e jovem para chamar a atenção a um problema que assola a população mundial como, por exemplo, o problema da obesidade, e apresentando também soluções simples e eficazes com atitudes que podem ser feitas em qualquer lugar da casa ou apartamento, consiste em tentar proporcionar o tão conhecido “primeiro-passo” a uma vida consciente .<p>
 			</aside>
 			<aside class="windgets2">
